client: clear resend_mds only after sending request

The client may not be able to immediately send the request after learning the
target; e.g. the target rank has no session yet or is otherwise temporarily
unavailable.

Fixes: https://tracker.ceph.com/issues/65614
Signed-off-by: Patrick Donnelly <pdonnell@redhat.com>
(cherry picked from commit 3a3227adb52624ae3a39e78921d3a17114e1b404)